--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -22,7 +22,7 @@
     "from citipy import citipy\n",
     "\n",
     "# Output File (CSV)\n",
-    "output_data_file = \"output_data/cities.csv\"\n",
+    "output_data_file = \"data/worldcities.csv\"\n",
     "\n",
     "# Range of latitudes and longitudes\n",
     "lat_range = (-90, 90)\n",
@@ -38,9 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<zip at 0x1122b1208>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# List for holding lat_lngs and cities\n",
     "lat_lngs = []\n",
@@ -60,7 +71,7 @@
     "        cities.append(city)\n",
     "\n",
     "# Print the city count to confirm sufficient count\n",
-    "len(cities)"
+    "len(cities)\n"
    ]
   },
   {
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
